--- a/App.Web/Views/DoctorPole/ReportIndex.cshtml
+++ b/App.Web/Views/DoctorPole/ReportIndex.cshtml
@@ -138,7 +138,13 @@
                 Name
             </th>
             <th>
+                Mobile
+            </th>
+            <th>
                 B/G
+            </th>
+            <th>
+                Sex
             </th>
             <th>
                 Designation
@@ -161,12 +167,12 @@
             <th>
                 Next Followup
             </th>
-            <th>
+            @*<th>
                 Counseling by
             </th>
             <th>
                 Last Counseling at
-            </th>
+            </th>*@
             @if (UserRole.Check("DoctorPool_Doc", SessionHelper.Role)
                 || UserRole.Check("DoctorPool_Suspect", SessionHelper.Role)
                 || UserRole.Check("DoctorPool_Council", SessionHelper.Role))
