--- a/App.Web/Views/DoctorPole/FollowupIndex.cshtml
+++ b/App.Web/Views/DoctorPole/FollowupIndex.cshtml
@@ -119,6 +119,9 @@
                 B/G
             </th>
             <th>
+                Age
+            </th>
+            <th>
                 Sex
             </th>
             <th>
@@ -226,7 +229,7 @@
             //'ToDate': 'ToDate'
         }
         var btns = {
-            13: false //column number : is button group
+            14: false //column number : is button group
         };
 
         /*data grid initializer*/
