--- a/App.Web/Views/DoctorPole/Dashboard.cshtml
+++ b/App.Web/Views/DoctorPole/Dashboard.cshtml
@@ -10,7 +10,7 @@
         <ul class="breadcrumb">
             <li>
                 <h2 class="textPrimary">
-                    Telemedicine Dashboard
+                    Telemedicine Staff Dashboard
                 </h2>
             </li>
         </ul>
@@ -53,7 +53,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var row in Model.ProgramWiseCases.OrderByDescending(c=> c.Value))
+                                        @foreach (var row in Model.ProgramWiseCases.OrderByDescending(c => c.Value))
                                         {
                                             <tr>
                                                 <td>@row.Particular</td>
@@ -97,7 +97,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var row in Model.DistrictWiseCases_MinVariable.OrderByDescending(c=> c.Value))
+                                        @foreach (var row in Model.DistrictWiseCases_MinVariable.OrderByDescending(c => c.Value))
                                         {
                                             <tr>
                                                 <td>@row.Particular</td>
@@ -211,6 +211,37 @@
                         <section class="utopia-widget">
                             <div class="utopia-widget-title">
                                 <img src="~/Content/img/icons2/group.png" class="utopia-widget-icon">
+                                <span>Call Records</span>
+                            </div>
+
+                            <div class="utopia-widget-content">
+
+                                <table class="table table-bordered">
+
+                                    <colgroup>
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                        <col class="utopia-col-1">
+                                        <col class="utopia-col-0">
+                                    </colgroup>                                    
+                                    <tbody>
+                                        <tr>
+                                            <th>Total Call</th>
+                                            <td>@Model.TotalCall</td>
+                                            
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </section>
+                    </div>
+                    <div class="span12">
+
+                        <section class="utopia-widget">
+                            <div class="utopia-widget-title">
+                                <img src="~/Content/img/icons2/group.png" class="utopia-widget-icon">
                                 <span>District wise cases</span>
                             </div>
 
@@ -313,6 +344,7 @@
                                             <th>Hospital Admission</th>
                                             <td>@Model.TotalHospitalized</td>
                                         </tr>
+
                                     </tbody>
                                 </table>
 
